[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-startone-root"
version = "0.1.0"
description = "Root OpenEnv packaging for Startone environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core[core]>=0.2.1",
  "openai>=1.40.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
server = "startone.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["startone", "startone.server"]
package-dir = { "startone" = "startone", "startone.server" = "startone/server" }
